k8n/overlays/dev/nginx-test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - http:
      paths:
      - path: /dev/
        pathType: Prefix
        backend:
          service: 
            name: dev-webapp-service
            port:
              number: 80
